# s2t-ipa

./: .gitignore  TESTING_SUMMARY.md  WIKIPRON_VALIDATION_SUMMARY.md  pyproject.toml  requirements.txt  run_tests.py  working_wikipron_urls.txt
.github/workflows/: build-image.yml  deploy-container.yml
app/: json_ipa.py  main.py  wikipron.py  wikipron_config.py
docker/: .dockerignore  Dockerfile  SERVER_SETUP.md
tests/: README.md  conftest.py  test_integration.py  test_json_ipa.py  test_wikipron.py
